# lib_tty_portmux

./: CMakeLists.txt  README.md
include/: lib_tty_portmux.h  lib_tty_portmux_types.h  lib_ttyportmux.h  lib_ttyportmux_types.h
plugins/: tty_port_console.c  tty_port_console.h  tty_port_syslog.c  tty_port_syslog.h  tty_port_trace_CORTEXM.c  tty_port_trace_CORTEXM.h  tty_port_unix.c  tty_port_unix.h  tty_portconsole.c  tty_portconsole.h  tty_portsyslog.c  tty_portsyslog.h  tty_porttrace_CORTEXM.c  tty_porttrace_CORTEXM.h  tty_portunix.c  tty_portunix.h
src/: lib_tty_portmux.c  lib_ttyportmux.c  tty_port_plugin_if.h  tty_port_plugin_init.h.in  tty_portplugin_if.h  tty_portplugin_init.h.in
